--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "bootstrap": "^4.3.1",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
     "expo-constants": "^7.0.0",
@@ -24,11 +25,13 @@
     "mobx-music": "^1.1.1",
     "q": "^1.5.1",
     "react": "16.8.3",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
+    "reactn": "^2.2.4",
     "tone": "^13.8.25"
   },
   "devDependencies": {
