--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-hyperlink": "0.0.16",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
+    "react-orchestra": "^0.5.2",
     "reactn": "^2.2.4",
     "tone": "^13.8.25"
   },
